# api/internal/server/docs/swagger.json
@@ -47,7 +47,7 @@
                 }
             }
         },
-        "/v/{version_id}": {
+        "/v/{id}/{version_id}": {
             "get": {
                 "produces": [
                     "text/html"
@@ -57,6 +57,13 @@
                 ],
                 "summary": "Render version wrapper",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Document ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Version ID",
